(library
 (name redis_test)
 (modules test)
 (wrapped false)
 (flags :standard -safe-string -warn-error -a)
 (libraries containers unix redis oUnit))

(executable
 (name test_lwt)
 (modules test_lwt)
 (flags :standard -safe-string)
 (libraries redis_test redis_lwt))

(alias
 (name runtest)
 (locks ../test)
 (package redis-lwt)
 (deps
  (:< test_lwt.exe))
 (action
  (run %{<})))
